--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -206,6 +206,7 @@
         filterGeoJson(filterObject);
     });
     $("a.facet-controller#project_years_on").click(function(){
+        var project_years = ["2013","2012","2011","2010","2009","2008","2007","2006","2005","2004","2003","2002","2001","2000"]
         filterObject.project_year = project_years;
         filterGeoJson(filterObject);
     });
