Formatted USGS attribution

--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -119,7 +119,7 @@
                 format: 'image/png',
                 STYLE: 'default',
                 transparent: 'true',
-                attribution: "USGS MRDS @ http://tin.er.usgs.gov/mrds/",
+                attribution: "Base layer from <a href='http://tin.er.usgs.gov/mrds/'>USGS MRDS</a>",
                 noWrap:true
             }),
 //Set-up map
