--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -16,30 +16,6 @@
     h4 {margin-left:5px;}
     #layercontrol img{display:none;}
     form.leaflet-control-layers-list{margin:0px !important;}
-    .info {
-        padding: 6px 8px;
-        font: 14px/16px Arial, Helvetica, sans-serif;
-        background: white;
-        background: rgba(255,255,255,0.8);
-        box-shadow: 0 0 15px rgba(0,0,0,0.2);
-        border-radius: 5px;
-    }
-    .info h4 {
-        margin: 0 0 5px;
-        color: #777;
-    }
-    .legend {
-        text-align: left;
-        line-height: 18px;
-        color: #555;
-    }
-    .legend i {
-        width: 18px;
-        height: 18px;
-        float: left;
-        margin-right: 8px;
-        opacity: 0.7;
-    }
 </style>
 <div id="vis">
     <div id="searchbar">
@@ -171,33 +147,6 @@
             fillOpacity: 0.5};
 //Set-up Leaflet Controls
     L.control.layers(baseMaps).addTo(map);
-    function getColor(d) {
-        return d > 1000 ? '#800026' :
-                        d > 500  ? '#BD0026' :
-                        d > 200  ? '#E31A1C' :
-                        d > 100  ? '#FC4E2A' :
-                        d > 50   ? '#FD8D3C' :
-                        d > 20   ? '#FEB24C' :
-                        d > 10   ? '#FED976' :
-                '#FFEDA0';
-    }
-    var legend = L.control({position: 'bottomright'});
-    legend.onAdd = function (map) {
-        var div = L.DomUtil.create('div', 'info legend'),
-                grades = [0, 10, 20, 50, 100, 200, 500, 1000],
-                labels = [],
-                from, to;
-        for (var i = 0; i < grades.length; i++) {
-            from = grades[i];
-            to = grades[i + 1];
-            labels.push(
-                            '<i style="background:' + getColor(from + 1) + '"></i> ' +
-                            from + (to ? '&ndash;' + to : '+'));
-        }
-        div.innerHTML = labels.join('<br>');
-        return div;
-    };
-    legend.addTo(map);
 //GeoJson Functions
 function highlightFeature(e) {
     var layer = e.target;
@@ -251,7 +200,7 @@ function onEachFeature(feature,layer){
     }
     }
 if (feature_collection === null){
-    console.log("Feature collection error.")
+    throw "Feature collection error"
     feature_collection = {};
     feature_collection.features=[];}
 var geoJsonSubset = L.geoJson(),
