--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -15,6 +15,7 @@
     h4 {margin-left:5px;}
     #searchresults #hoverInfo{margin:0 0 10px 10px;}
     form.leaflet-control-layers-list{margin:0px !important;}
+    .leaflet-control-layers-expanded{background-image:url(icons-000000.png);background-position:0 0;background-repeat:no-repeat;}
     .info {padding: 6px 8px;font: 14px/16px Arial, Helvetica, sans-serif;background: white;background: rgba(255,255,255,0.8);box-shadow: 0 0 15px rgba(0,0,0,0.2);border-radius: 5px;}
     .info h4 {margin: 0 0 5px;color: #777;}
     .legend {text-align: left;line-height: 18px;color: #555;}
@@ -148,6 +149,12 @@
     var layerControl = L.control.layers(baseMaps);
     layerControl.options.collapsed = false;
     layerControl.addTo(map);
+    layerControl.collapse = function(){
+        layerControl.removeFrom(map);
+        layerControl.options.collapsed = true;
+        layerControl.addTo(map);
+    }
+    $('.leaflet-control-layers-base').prepend("<span style='float:right;cursor:pointer;' onClick='layerControl.collapse()'><strong>X</strong></span>")
     function getColor(d) {
         return d > 1000 ? '#800026' :
                         d > 500  ? '#BD0026' :
