--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -154,32 +154,14 @@
         layerControl.addTo(map);
     }
     $('.leaflet-control-layers-base').prepend("<span style='float:right;cursor:pointer;' onClick='layerControl.collapse()'><strong>X</strong></span>")
-    function getColor(d) {
-        return d > 1000 ? '#800026' :
-                        d > 500  ? '#BD0026' :
-                        d > 200  ? '#E31A1C' :
-                        d > 100  ? '#FC4E2A' :
-                        d > 50   ? '#FD8D3C' :
-                        d > 20   ? '#FEB24C' :
-                        d > 10   ? '#FED976' :
-                '#FFEDA0';
+    function getColorPoverty(d) {
+        return d > 79.9  ? '#FF0202' :
+                        d > 59.9   ? '#FA5A5A' :
+                        d > 39.9   ? '#F78282' :
+                        d > 19.9   ? '#F5AAAA' :
+                '#F6CECE';
     }
     var legend = L.control({position: 'bottomright'});
-    legend.onAdd = function (map) {
-        var div = L.DomUtil.create('div', 'info legend'),
-                grades = [0, 10, 20, 50, 100, 200, 500, 1000],
-                labels = [],
-                from, to;
-        for (var i = 0; i < grades.length; i++) {
-            from = grades[i];
-            to = grades[i + 1];
-            labels.push(
-                            '<i style="background:' + getColor(from + 1) + '"></i> ' +
-                            from + (to ? '&ndash;' + to : '+'));
-        }
-        div.innerHTML = labels.join('<br>');
-        return div;
-    };
 //GeoJson Functions
 function highlightFeature(e) {
     var layer = e.target,
@@ -312,21 +294,47 @@ $(document).ready(function(){
         }
         if(selected_layer.name=="Poverty"){
             console.log("Selected layer: Poverty")
-            if (legend._map==null){
-                map.addControl(legend);
+            legend.onAdd = function (map) {
+                var div = L.DomUtil.create('div', 'info legend'),
+                        grades = [0, 20, 40, 60, 80],
+                        labels = [],
+                        from, to;
+                for (var i = 0; i < grades.length; i++) {
+                    from = grades[i];
+                    to = grades[i + 1];
+                    labels.push(
+                                    '<i style="background:' + getColorPoverty(from) + '"></i> ' +
+                                    from + (to ? '&ndash;' + to + '%' : '%+'));
+                }
+                div.innerHTML = labels.join('<br>');
+                return div;
+            };
+            if (legend._map!=null){
+                map.removeControl(legend);
             }
+            map.addControl(legend);
         }
         if(selected_layer.name=="Armed Conflict"){
             console.log("Selected layer: Armed Conflict")
-            if (legend._map==null){
-                map.addControl(legend);
+            legend.onAdd = function(map){
+                var div = L.DomUtil.create('div', 'info legend');
+                return div;
             }
+            if (legend._map!=null){
+                map.removeControl(legend);
+            }
+            map.addControl(legend);
         }
         if(selected_layer.name=="Minerals and Mines"){
             console.log("Selected layer: Minerals and Mines")
-            if (legend._map==null){
-                map.addControl(legend);
+            legend.onAdd = function(map){
+                var div = L.DomUtil.create('div', 'info legend');
+                return div;
             }
+            if (legend._map!=null){
+                map.removeControl(legend);
+            }
+            map.addControl(legend);
         }
     })
 })
