--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -179,11 +179,7 @@ function highlightFeature(e) {
         $('div#hoverInfo').html("<strong>Project ID: </strong>"+ feature.properties.project_id + "<br/><strong>Year: </strong>" + feature.properties.project_year + "<br/><strong>Location: </strong>" + feature.properties.geo_name + "<br/><strong>Precision: </strong>" + feature.properties.precision_code);
     }
 }
-function delayHighlight(e){
-    thisTimeout = setTimeout(function(){highlightFeature(e)},100)
-}
 function resetHighlight(e) {
-    clearTimeout(thisTimeout)
     var layer = e.target;
     layer.setStyle({
         weight: 1
@@ -223,7 +219,7 @@ function zoomToFeature(bounds){
 };
 function onEachFeature(feature,layer){
         layer.on({
-            mouseover:delayHighlight,
+            mouseover:highlightFeature,
             mouseout:resetHighlight,
             click: highlightProject
         })
